--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "fs-extra": "^9.0.0",
     "globby": "^11.0.0",
     "got": "^10.5.2",
+    "issue-parser": "^6.0.0",
     "lodash": "^4.17.11",
     "parse-path": "^4.0.0",
     "url-join": "^4.0.0"
