--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "contributors": [
     "Stephan Bönnemann <stephan@boennemann.me> (http://boennemann.me)",
-    "Gregor Martynus (https://twitter.com/gr2m)"
+    "Gregor Martynus (https://twitter.com/gr2m)",
+    "D4rkCr0w (https://www.d4rkcr0w.com)"
   ],
   "dependencies": {
     "@semantic-release/error": "^2.2.0",
@@ -48,7 +49,7 @@
     "lib",
     "index.js"
   ],
-  "homepage": "https://github.com/semantic-release/gitlab#readme",
+  "homepage": "https://github.com/d4rkcr0w/semantic-release-gitlab#readme",
   "keywords": [
     "git",
     "gitlab",
@@ -83,7 +84,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/semantic-release/gitlab.git"
+    "url": "https://github.com/d4rkcr0w/semantic-release-gitlab.git"
   },
   "scripts": {
     "lint": "xo",
